// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snapshots it renders brand color correctly 1`] = `
<button
  className="btn btn-success"
  type="button"
>
  Facebook
</button>
`;

exports[`<Button /> Snapshots it renders defaults correctly 1`] = `
<button
  className="btn btn-primary"
  type="button"
>
  Facebook
</button>
`;

exports[`<Button /> Snapshots it renders large outline correctly 1`] = `
<button
  className="btn btn-outline-success btn-lg"
  type="button"
>
  Facebook
</button>
`;

exports[`<Button /> Snapshots it renders link style correctly 1`] = `
<button
  className="btn btn-anchor"
  type="button"
>
  Facebook
</button>
`;

exports[`<Button /> Snapshots it renders outline correctly 1`] = `
<button
  className="btn btn-outline-success"
  type="button"
>
  Facebook
</button>
`;
